@@ -11,26 +11,24 @@ import net.minecraft.resources.*;
 import net.minecraftforge.api.distmarker.*;
 import org.joml.*;
 
+import static mod.maxbogomol.fluffy_fur.registry.client.FluffyFurRenderTypes.getDelayedRender;
+
 @OnlyIn(Dist.CLIENT)
 public class ValoriaPortalRenderer<T extends ValoriaPortalBlockEntity> implements BlockEntityRenderer<T>{
-    public static final ResourceLocation END_SKY_LOCATION = new ResourceLocation("textures/environment/end_sky.png");
-    public static final ResourceLocation END_PORTAL_LOCATION = new ResourceLocation("textures/entity/end_portal.png");
+    public static final ResourceLocation BACKGROUND_LOC = new ResourceLocation(Valoria.ID, "textures/valoria_portal.png");
+    public static final ResourceLocation LAYER_LOC = new ResourceLocation(Valoria.ID, "textures/valoria_portal_layer2.png");
 
     public ValoriaPortalRenderer(BlockEntityRendererProvider.Context pContext) {
     }
 
     public void render(T pBlockEntity, float pPartialTick, PoseStack pPoseStack, MultiBufferSource pBuffer, int pPackedLight, int pPackedOverlay) {
         Matrix4f matrix4f = pPoseStack.last().pose();
-        this.renderCube(pBlockEntity, matrix4f, pBuffer.getBuffer(this.renderType()));
+        this.renderCube(pBlockEntity, matrix4f, getDelayedRender().getBuffer(renderType()));
     }
 
     private void renderCube(T pBlockEntity, Matrix4f pPose, VertexConsumer pConsumer) {
         float f = this.getOffsetDown();
         float f1 = this.getOffsetUp();
-        this.renderFace(pBlockEntity, pPose, pConsumer, 0.0F, 1.0F, 0.0F, 1.0F, 1.0F, 1.0F, 1.0F, 1.0F, Direction.SOUTH);
-        this.renderFace(pBlockEntity, pPose, pConsumer, 0.0F, 1.0F, 1.0F, 0.0F, 0.0F, 0.0F, 0.0F, 0.0F, Direction.NORTH);
-        this.renderFace(pBlockEntity, pPose, pConsumer, 1.0F, 1.0F, 1.0F, 0.0F, 0.0F, 1.0F, 1.0F, 0.0F, Direction.EAST);
-        this.renderFace(pBlockEntity, pPose, pConsumer, 0.0F, 0.0F, 0.0F, 1.0F, 0.0F, 1.0F, 1.0F, 0.0F, Direction.WEST);
         this.renderFace(pBlockEntity, pPose, pConsumer, 0.0F, 1.0F, f, f, 0.0F, 0.0F, 1.0F, 1.0F, Direction.DOWN);
         this.renderFace(pBlockEntity, pPose, pConsumer, 0.0F, 1.0F, f1, f1, 1.0F, 1.0F, 0.0F, 0.0F, Direction.UP);
     }
@@ -42,15 +40,14 @@ public class ValoriaPortalRenderer<T extends ValoriaPortalBlockEntity> implement
             pConsumer.vertex(pPose, pX1, pY1, pZ2).endVertex();
             pConsumer.vertex(pPose, pX0, pY1, pZ3).endVertex();
         }
-
     }
 
     protected float getOffsetUp() {
-        return 0.75F;
+        return 0.55F;
     }
 
     protected float getOffsetDown() {
-        return 0.375F;
+        return 0.435F;
     }
 
     protected RenderType renderType() {
