@@ -8,7 +8,6 @@ uniform mat4 ModelViewMat;
 uniform mat4 ProjMat;
 
 out vec4 texProj0;
-
 void main() {
     gl_Position = ProjMat * ModelViewMat * vec4(Position, 1.0);
     texProj0 = projection_from_position(gl_Position);
